--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     "stats:yearly": "dotenv -e .env ts-node src/scripts/getYearlyStats.ts",
     "start": "next start",
     "lint": "next lint",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
     "chromatic": "chromatic --exit-zero-on-changes",
     "testIframes": "npx playwright install chromium; npx ts-node -r dotenv/config src/scripts/testIframes.ts"
   },
@@ -42,111 +40,101 @@
     "yarn": "1.22"
   },
   "dependencies": {
-    "@iframe-resizer/child": "^5.3.3",
-    "@iframe-resizer/parent": "^5.3.3",
-    "@incubateur-ademe/publicodes-acv-numerique": "^1.2.0",
-    "@next/bundle-analyzer": "^15.2.4",
-    "@prisma/client": "^6.5.0",
-    "@publicodes/react-ui": "^1.7.1",
-    "@r2wc/react-to-web-component": "^2.0.4",
-    "@sentry/nextjs": "^9.9.0",
+    "@iframe-resizer/child": "^5.5.7",
+    "@iframe-resizer/parent": "^5.5.7",
+    "@incubateur-ademe/publicodes-acv-numerique": "^2.0.0",
+    "@next/bundle-analyzer": "^15.5.4",
+    "@prisma/client": "^6.16.2",
+    "@publicodes/react-ui": "^1.9.1",
+    "@r2wc/react-to-web-component": "^2.1.0",
+    "@sentry/nextjs": "^10.15.0",
     "@socialgouv/matomo-next": "^1.9.2",
-    "@tanstack/react-query": "^5.69.0",
-    "@tanstack/react-query-next-experimental": "^5.69.0",
-    "axios": "^1.8.4",
+    "@tanstack/react-query": "^5.90.2",
+    "@tanstack/react-query-next-experimental": "^5.90.2",
+    "axios": "^1.12.2",
     "classnames": "^2.5.1",
-    "core-js": "^3.41.0",
-    "crisp-api": "^9.9.0",
-    "dotenv-cli": "^8.0.0",
+    "core-js": "^3.45.1",
+    "crisp-api": "^10.0.14",
+    "dotenv-cli": "^10.0.0",
     "fuse.js": "^7.1.0",
     "helmet": "^8.1.0",
     "html-to-image": "1.11.11",
-    "markdown-to-jsx": "^7.7.4",
-    "next": "^15.2.4",
-    "next-intl": "^4.0.2",
+    "markdown-to-jsx": "^7.7.13",
+    "next": "^15.5.4",
+    "next-intl": "^4.3.9",
     "next-query-params": "^5.1.0",
     "next-sitemap": "^4.2.3",
-    "notion-client": "^7.3.0",
-    "postcss": "^8.5.3",
+    "notion-client": "^7.6.0",
+    "postcss": "^8.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-import": "^16.1.0",
+    "postcss-import": "^16.1.1",
     "postcss-nested": "^7.0.2",
-    "postcss-preset-env": "^10.1.5",
-    "preact": "^10.26.4",
+    "postcss-preset-env": "^10.4.0",
+    "preact": "^10.27.2",
     "publicodes": "1.4.0",
     "qrcode": "^1.5.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-notion-x": "^7.3.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-notion-x": "^7.6.0",
     "react-share": "^5.2.2",
-    "sharp": "^0.33.5",
+    "sharp": "^0.34.4",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-react": "^5.20.1",
+    "swagger-ui-react": "^5.29.1",
     "ts-node": "^10.9.2",
-    "zod": "^3.24.2"
+    "zod": "3.24.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.27.0",
-    "@babel/core": "^7.26.10",
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.4",
     "@babel/helper-split-export-declaration": "^7.24.7",
-    "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3",
-    "@babel/preset-typescript": "^7.27.0",
-    "@babel/runtime": "^7.27.0",
-    "@playwright/test": "^1.51.1",
-    "@statoscope/webpack-plugin": "^5.28.3",
-    "@storybook/addon-a11y": "^8.6.9",
-    "@storybook/addon-essentials": "^8.6.9",
-    "@storybook/addon-interactions": "^8.6.9",
-    "@storybook/addon-links": "^8.6.9",
-    "@storybook/blocks": "^8.6.9",
-    "@storybook/nextjs": "^8.6.9",
-    "@storybook/react": "^8.6.9",
-    "@storybook/testing-library": "^0.2.2",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
+    "@babel/runtime": "^7.28.4",
+    "@playwright/test": "^1.55.1",
+    "@statoscope/webpack-plugin": "^5.29.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/node-pdftk": "^2.1.9",
     "@types/qrcode": "^1.5.5",
     "@types/react-highlight-words": "^0.20.0",
     "@types/react-slick": "^0.23.13",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^5.18.0",
-    "@typescript-eslint/eslint-plugin": "^8.28.0",
-    "@typescript-eslint/parser": "^8.28.0",
+    "@typescript-eslint/eslint-plugin": "^8.44.1",
+    "@typescript-eslint/parser": "^8.44.1",
     "babel-loader": "^10.0.0",
-    "chromatic": "^11.27.0",
+    "chromatic": "^13.2.1",
     "css-loader": "6.11.0",
-    "eslint": "^9.23.0",
-    "eslint-config-next": "^15.2.4",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-jest": "^28.11.0",
-    "eslint-plugin-prettier": "^5.2.5",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-storybook": "^0.11.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.5.0",
-    "next-router-mock": "^0.9.13",
+    "eslint": "^9.36.0",
+    "eslint-config-next": "^15.5.4",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "lint-staged": "^16.2.3",
+    "next-router-mock": "^1.0.2",
     "next-statoscope": "^1.0.1",
-    "next-test-api-route-handler": "^4.0.15",
-    "nock": "^14.0.1",
-    "node-mocks-http": "^1.16.2",
+    "next-test-api-route-handler": "^5.0.3",
+    "nock": "^14.0.10",
+    "node-mocks-http": "^1.17.2",
     "node-pdftk": "^2.1.3",
     "nyc": "^17.1.0",
     "pdf-merger-js": "^5.1.2",
-    "playwright": "^1.51.1",
-    "postcss-loader": "^8.1.1",
-    "prettier": "^3.5.3",
-    "prisma": "^6.5.0",
-    "storybook": "^8.6.9",
-    "storybook-dark-mode": "^4.0.2",
+    "playwright": "^1.55.1",
+    "postcss-loader": "^8.2.0",
+    "prettier": "^3.6.2",
+    "prisma": "^6.16.2",
     "style-loader": "^4.0.0",
-    "typescript": "^5.8.2",
-    "undici": "6.21.0",
-    "webpack": "^5.98.0",
+    "ts-jest": "^29.4.4",
+    "typescript": "^5.9.2",
+    "undici": "7.16.0",
+    "webpack": "^5.101.3",
     "webpack-cli": "^6.0.1"
   },
   "lint-staged": {
