--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "@babel/preset-typescript": "^7.28.5",
     "@babel/runtime": "^7.28.6",
     "@eslint/eslintrc": "^3.3.3",
+    "@incubateur-ademe/publicodes-empreinte-carbone-chauffage": "^0.0.7",
     "@keyv/etcd": "^2.1.1",
     "@keyv/mongo": "^3.1.0",
     "@keyv/mysql": "^2.1.9",
