--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
     "@typescript-eslint/eslint-plugin": "^8.50.1",
     "@typescript-eslint/parser": "^8.50.1",
     "babel-loader": "^10.0.0",
-    "css-loader": "7.1.2",
+    "css-loader": "^7.1.2",
     "dotenv": "^17.2.3",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.1",
