--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "dotenv-cli": "^11.0.0",
     "fuse.js": "^7.1.0",
     "helmet": "^8.1.0",
-    "html-to-image": "1.11.11",
+    "html-to-image": "^1.11.13",
     "markdown-to-jsx": "^9.5.0",
     "next": "^16.1.1",
     "next-intl": "^4.6.1",
