--- a/package.json
+++ b/package.json
@@ -44,55 +44,57 @@
     "@iframe-resizer/child": "^5.5.7",
     "@iframe-resizer/parent": "^5.5.7",
     "@incubateur-ademe/publicodes-acv-numerique": "^2.1.0",
-    "@prisma/client": "^6.16.2",
-    "@publicodes/react-ui": "^1.9.1",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
+    "@publicodes/react-ui": "^1.10.0",
     "@r2wc/react-to-web-component": "^2.1.0",
-    "@sentry/nextjs": "^10.15.0",
-    "@socialgouv/matomo-next": "^1.9.2",
-    "@tanstack/react-query": "^5.90.2",
-    "@tanstack/react-query-next-experimental": "^5.90.2",
-    "axios": "^1.12.2",
+    "@sentry/nextjs": "^10.32.1",
+    "@socialgouv/matomo-next": "^1.11.0",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-next-experimental": "^5.91.0",
+    "axios": "^1.13.2",
     "classnames": "^2.5.1",
-    "core-js": "^3.45.1",
-    "crisp-api": "^10.0.14",
-    "dotenv-cli": "^10.0.0",
+    "core-js": "^3.47.0",
+    "crisp-api": "^10.2.0",
+    "dotenv-cli": "^11.0.0",
     "fuse.js": "^7.1.0",
     "helmet": "^8.1.0",
-    "html-to-image": "1.11.11",
-    "markdown-to-jsx": "^7.7.13",
-    "next": "^16.0.10",
-    "next-intl": "^4.3.9",
+    "html-to-image": "^1.11.13",
+    "markdown-to-jsx": "^9.5.0",
+    "next": "^16.1.1",
+    "next-intl": "^4.6.1",
     "next-query-params": "^5.1.0",
     "next-sitemap": "^4.2.3",
-    "notion-client": "^7.6.0",
-    "notion-types": "^7.7.1",
+    "notion-client": "^7.7.3",
+    "notion-types": "^7.7.3",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^16.1.1",
     "postcss-nested": "^7.0.2",
-    "postcss-preset-env": "^10.4.0",
-    "preact": "^10.27.2",
-    "prisma": "^6.16.2",
-    "publicodes": "1.4.0",
+    "postcss-preset-env": "^10.5.0",
+    "preact": "^10.28.1",
+    "prisma": "^7.2.0",
+    "publicodes": "^1.9.1",
     "qrcode": "^1.5.4",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-notion-x": "^7.6.0",
+    "react-notion-x": "^7.7.3",
     "react-share": "^5.2.2",
-    "sharp": "^0.34.4",
+    "sharp": "^0.34.5",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-react": "^5.29.1",
-    "tsx": "^4.20.6",
-    "use-intl": "^4.5.6",
-    "zod": "3.24.2"
+    "swagger-ui-react": "^5.31.0",
+    "tsx": "^4.21.0",
+    "use-intl": "^4.6.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
-    "@babel/core": "^7.28.4",
+    "@babel/core": "^7.28.5",
     "@babel/helper-split-export-declaration": "^7.24.7",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-react": "^7.27.1",
-    "@babel/preset-typescript": "^7.27.1",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
     "@babel/runtime": "^7.28.4",
     "@eslint/eslintrc": "^3.3.3",
     "@keyv/etcd": "^2.1.1",
@@ -100,56 +102,57 @@
     "@keyv/mysql": "^2.1.9",
     "@keyv/offline": "^4.0.2",
     "@keyv/postgres": "^2.2.2",
-    "@keyv/redis": "^5.1.4",
+    "@keyv/redis": "^5.1.5",
     "@keyv/sqlite": "^4.0.6",
     "@keyv/tiered": "^2.0.2",
-    "@next/bundle-analyzer": "^15.5.4",
-    "@playwright/test": "^1.55.1",
+    "@next/bundle-analyzer": "^16.1.1",
+    "@playwright/test": "^1.57.0",
     "@statoscope/webpack-plugin": "^5.29.0",
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
-    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
+    "@trivago/prettier-plugin-sort-imports": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/node-pdftk": "^2.1.9",
-    "@types/qrcode": "^1.5.5",
+    "@types/pg": "^8.16.0",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.7",
-    "@types/react-highlight-words": "^0.20.0",
+    "@types/react-highlight-words": "^0.20.1",
     "@types/react-slick": "^0.23.13",
     "@types/semver": "^7.7.1",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-react": "^5.18.0",
-    "@typescript-eslint/eslint-plugin": "^8.44.1",
-    "@typescript-eslint/parser": "^8.44.1",
+    "@typescript-eslint/eslint-plugin": "^8.50.1",
+    "@typescript-eslint/parser": "^8.50.1",
     "babel-loader": "^10.0.0",
-    "css-loader": "6.11.0",
+    "css-loader": "^7.1.2",
     "dotenv": "^17.2.3",
-    "eslint": "^9.36.0",
-    "eslint-config-next": "^16.0.10",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-jest": "^29.0.1",
+    "eslint-plugin-jest": "^29.11.0",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.37.5",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
-    "lint-staged": "^16.2.3",
-    "next-router-mock": "^1.0.2",
+    "lint-staged": "^16.2.7",
+    "next-router-mock": "^1.0.4",
     "next-statoscope": "^1.0.1",
     "next-test-api-route-handler": "^5.0.3",
     "nock": "^14.0.10",
     "node-mocks-http": "^1.17.2",
     "node-pdftk": "^2.1.3",
     "nyc": "^17.1.0",
-    "only-allow": "1.2.2",
+    "only-allow": "^1.2.2",
     "pdf-merger-js": "^5.1.2",
     "postcss-loader": "^8.2.0",
-    "prettier": "^3.6.2",
+    "prettier": "^3.7.4",
     "semver": "^7.7.3",
     "style-loader": "^4.0.0",
-    "ts-jest": "^29.4.4",
-    "typescript": "^5.9.2",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3",
     "undici": "7.16.0",
-    "webpack": "^5.101.3",
+    "webpack": "^5.104.1",
     "webpack-cli": "^6.0.1",
     "yaml": "^2.8.2"
   },
