--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "baseUrl": ".",
     "types": [
@@ -36,6 +36,9 @@
       ],
       "hooks/*": [
         "src/hooks/*"
+      ],
+      "@prisma/*": [
+        "prisma/generated/prisma/*"
       ]
     },
     "module": "esnext",
